--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -99,7 +99,7 @@
 <div id="about" name="about">
   <div class="container">
     <div class="row white">
-      <h2 class="centered">Our Shop</h2>
+      <h2 class="centered">Nossa Loja</h2>
       <hr>
       <div class="col-md-6"> <img class="img-responsive" src="assets/img/about/about1.jpg" align=""> </div>
       <div class="col-md-6">
